--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Scheduler">
-        <activity android:name=".AddConditionActivity"></activity>
+        <activity android:name=".ScheduleActivity"></activity>
+        <activity android:name=".AddConditionActivity" />
         <activity android:name=".SelectEmployeeActivity" />
         <activity android:name=".AddShiftActivity" />
         <activity android:name=".DayActivity" />
